# abc-hs

./: .gitignore  Justfile  README.adoc  cheat.hs  compile  execute  flake.nix  go  new  s  submit  t  test  ts  x
.verify-helper/: config.toml
_acc/: README.adoc  _acc.cabal  cabal.project  hie.yaml  package.yaml  stack.yaml
_template/: package.yaml  stack.yaml
abc001/: contest.acc.json
abc002/: contest.acc.json
abc003/: contest.acc.json
abc004/: contest.acc.json
abc005/: contest.acc.json
abc006/: abc006.cabal  contest.acc.json  hie.yaml
abc007/: abc007.cabal  contest.acc.json  hie.yaml
abc008/: contest.acc.json
abc009/: contest.acc.json
abc010/: contest.acc.json
abc011/: contest.acc.json
abc012/: contest.acc.json
abc013/: contest.acc.json
abc014/: contest.acc.json
abc015/: contest.acc.json
abc016/: contest.acc.json
abc017/: contest.acc.json  package.yaml
abc018/: contest.acc.json
abc019/: contest.acc.json
abc020/: contest.acc.json
abc021/: contest.acc.json
abc022/: contest.acc.json
abc023/: contest.acc.json
abc024/: contest.acc.json
abc025/: contest.acc.json
abc026/: contest.acc.json
abc027/: contest.acc.json
abc028/: contest.acc.json
abc029/: contest.acc.json
abc030/: contest.acc.json
abc031/: contest.acc.json
abc032/: abc032.cabal  contest.acc.json  hie.yaml
abc033/: contest.acc.json
abc034/: contest.acc.json
abc035/: contest.acc.json
abc036/: abc036.cabal  contest.acc.json  hie.yaml
abc037/: contest.acc.json
abc038/: contest.acc.json
abc039/: contest.acc.json  package.yaml
abc040/: contest.acc.json  package.yaml  stack.yaml
abc041/: contest.acc.json
abc042/: contest.acc.json
abc043/: contest.acc.json
abc044/: contest.acc.json
abc045/: contest.acc.json
abc046/: contest.acc.json
abc047/: contest.acc.json
abc048/: contest.acc.json
abc049/: contest.acc.json
abc050/: contest.acc.json
abc051/: contest.acc.json
abc052/: contest.acc.json
abc053/: contest.acc.json
abc054/: abc054.cabal  contest.acc.json  hie.yaml
abc055/: contest.acc.json
abc056/: contest.acc.json
abc057/: contest.acc.json
abc058/: contest.acc.json
abc059/: contest.acc.json
abc060/: contest.acc.json
abc061/: contest.acc.json
abc062/: contest.acc.json
abc063/: contest.acc.json
abc064/: contest.acc.json
abc065/: contest.acc.json
abc066/: contest.acc.json
abc067/: contest.acc.json
abc068/: contest.acc.json
abc069/: contest.acc.json
abc070/: contest.acc.json  package.yaml
abc071/: contest.acc.json
abc072/: contest.acc.json
abc073/: contest.acc.json
abc074/: contest.acc.json
abc075/: contest.acc.json
abc076/: contest.acc.json
abc077/: contest.acc.json
abc078/: contest.acc.json
abc079/: contest.acc.json
abc080/: contest.acc.json
abc081/: contest.acc.json
abc082/: contest.acc.json
abc083/: contest.acc.json
abc084/: contest.acc.json
abc085/: contest.acc.json
abc086/: contest.acc.json
abc087/: contest.acc.json
abc088/: contest.acc.json
abc089/: contest.acc.json
abc090/: contest.acc.json
abc091/: contest.acc.json
abc092/: contest.acc.json
abc093/: contest.acc.json
abc094/: contest.acc.json
abc095/: contest.acc.json
abc096/: contest.acc.json
abc097/: contest.acc.json
abc098/: contest.acc.json
abc099/: contest.acc.json
abc101/: contest.acc.json
abc102/: contest.acc.json
abc103/: contest.acc.json
abc104/: contest.acc.json
abc105/: contest.acc.json
abc106/: contest.acc.json
abc107/: contest.acc.json
abc108/: contest.acc.json
abc109/: contest.acc.json
abc110/: contest.acc.json
abc111/: contest.acc.json
abc112/: contest.acc.json
abc113/: abc334.cabal  contest.acc.json
abc114/: abc114.cabal  contest.acc.json  hie.yaml
abc115/: contest.acc.json
abc116/: contest.acc.json
abc117/: contest.acc.json
abc118/: abc118.cabal  contest.acc.json  hie.yaml
abc119/: contest.acc.json
abc120/: contest.acc.json
abc121/: contest.acc.json
abc122/: contest.acc.json
abc123/: contest.acc.json
abc124/: contest.acc.json
abc125/: contest.acc.json
abc126/: abc126.cabal  contest.acc.json  hie.yaml
abc127/: contest.acc.json
abc128/: contest.acc.json
abc129/: contest.acc.json
abc130/: contest.acc.json
abc131/: contest.acc.json
abc132/: contest.acc.json
abc133/: abc133.cabal  contest.acc.json  hie.yaml
abc134/: contest.acc.json
abc135/: contest.acc.json
abc136/: contest.acc.json
abc137/: contest.acc.json
abc138/: contest.acc.json
abc139/: contest.acc.json
abc140/: contest.acc.json
abc141/: contest.acc.json
abc142/: contest.acc.json
abc143/: contest.acc.json
abc144/: contest.acc.json
abc145/: contest.acc.json
abc146/: contest.acc.json
abc147/: abc147.cabal  contest.acc.json  hie.yaml
abc148/: contest.acc.json
abc149/: contest.acc.json
abc150/: contest.acc.json
abc151/: contest.acc.json
abc152/: contest.acc.json
abc153/: contest.acc.json
abc154/: contest.acc.json
abc155/: contest.acc.json
abc156/: contest.acc.json
abc157/: contest.acc.json
abc158/: contest.acc.json
abc159/: contest.acc.json
abc160/: contest.acc.json
abc161/: contest.acc.json
abc162/: abc162.cabal  contest.acc.json
abc163/: contest.acc.json
abc164/: contest.acc.json
abc165/: contest.acc.json
abc166/: contest.acc.json
abc167/: contest.acc.json
abc168/: contest.acc.json
abc169/: abc169.cabal  contest.acc.json  hie.yaml
abc170/: contest.acc.json
abc171/: contest.acc.json
abc172/: contest.acc.json
abc173/: contest.acc.json
abc174/: contest.acc.json
abc376/: abc376.cabal  cabal.project  contest.acc.json
abc376/a/: Main.hs
abc376/b/: Main.hs
abc376/c/: Main.hs
abc376/d/: Main.hs
abc376/e/: Main.hs
abc376/f/: Main.hs
abc376/g/: Main.hs
abc435/: abc435.cabal  cabal.project  contest.acc.json  hie.yaml
abc435/a/: Main.hs
abc435/b/: Main.hs
abc435/c/: Main.hs
abc435/d/: Main.hs
abc435/d/test-cases/: sample-1.in
abc435/e/: Main.hs
abc435/f/: Main.hs
abc435/g/: Main.hs
abc435/g/test-cases/: sample-1.in  sample-3.in  sample-3.out
(+2459 files in other folders)
